--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
 
     <div class="ads"></div>
-    <h3 style="margin-left: 100px;">Fresh Recommendations</h3>
+    <h3 style="margin-left: 100px; color: red;"><b><i>Fresh Recommendations</i></b></h3>
     <div class="prod">
       
       <div class="product">
