--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
     </div>
 
     <div class="ads"></div>
-    <h3 style="margin-left: 100px; color: red;"><b><i>Fresh Recommendations</i></b></h3>
+    <div class="heading">
+    <h3>Fresh Recommendations</h3>
+  </div>
+  <div class="row">
+    <div class="col">
     <div class="prod">
       
       <div class="product">
@@ -118,7 +122,7 @@
         <p>3 bhk flat very nice flat in dwarka</p>
       </div>
 
-      <div class="product .col-12">
+      <div class="product">
         <div class="imgarea">
           <img src="https://apollo-singapore.akamaized.net/v1/files/bda5t3prcbbe1-IN/image;s=300x600;q=60">  
         </div>
@@ -141,6 +145,8 @@
         <h3>₹ 1,600</h3>
         <p>Antique brass sundail compass writch watch with leather strip</p>
       </div>
+    </div>
+    </div>
 
     </div>
 
